MDEV-6788: The variable 'role' is being used without being initialized at sql_acl.cc:8840

Don't check the value of 'role' variable in the cases where we don't need it. (it 
may be marked as unitialized and we get a runtime error).